[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.42"
mongodb = "3.3.0"
redis = "0.32.6"
serde = "1.0.228"
serde_json = "1.0.145"
serde_qs = "0.15.0"

[[bin]]
name = "todos"
path = "api/todos.rs"

[[bin]]
name = "add"
path = "api/add.rs"

[[bin]]
name = "delete"
path = "api/delete.rs"
